# fast-api-boilerplate

./: .env.example  README.md  README_create_module.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 11f91b67ac61_20241029141443_add_new_field_to_test_.py  20241113215222_initial_migrations.py  8f6731f8e4a6_20241029141327_add_table_test_items.py  98a5ccc0a7e4_create_test_items_table.py  b4f737b1dbe8_create_test_items_table.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: example.py  test_items.py
app/core/: config.py  context.py  exceptions.py  logging.py  repository.py
app/db/: session.py
app/middleware/: audit.py
app/models/: __init__.py  ai_models.py  base.py  credit.py  currency.py  enums.py  test_item.py  usage.py  usage_rate.py
app/repositories/: test_item.py
app/schemas/: response.py  test_item.py
app/services/: test_item.py
app/utils/: datetime_utils.py  debug.py  response_handler.py  transaction.py
scripts/: create_migration.sh  create_module.py
